# GitHealth

./: .env.example  .gitignore  LICENSE  README-v2.md  README.md  pyproject.toml
.github/workflows/: tests.yml
src/githealth/: __init__.py  __main__.py  cli.py  config.py  exceptions.py
src/githealth/analysis/: __init__.py  correlations.py  durations.py  hotspots.py  scores.py
src/githealth/collection/: collector.py
src/githealth/github/: client.py  pagination.py  parser.py
src/githealth/models/: __init__.py  file_change.py  pull_request.py  review.py
src/githealth/reports/: __init__.py  csv_report.py  html_report.py  json_report.py  terminal.py
src/githealth/reports/templates/: report.html.j2
tests/: conftest.py  test_cli.py  test_client.py  test_correlations.py  test_durations.py  test_hotspots.py  test_parser.py  test_reports.py  test_scores.py
