[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "githealth"
version = "0.1.0"
description = "CLI for mining GitHub pull requests and finding review bottlenecks."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Guilherme Henrique Gomes Evangelista" },
  { name = "Pedro Bacelar Rigueira" },
  { name = "Caio Souza Grossi" },
  { name = "Ana Paula Pereira Theobald" },
]
dependencies = [
  "httpx>=0.27",
  "jinja2>=3.1",
  "pandas>=2.2",
  "plotly>=5.22",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "ruff>=0.5",
]

[project.scripts]
githealth = "githealth.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
githealth = ["reports/templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

